--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     background-color: #f9f9f9;
     background: oklch(88.425% 0.0572 10.115);
     color: oklch(71.2% 0.194 13.428);
+    padding-inline: 2rem;
 
 }
 
@@ -23,7 +24,7 @@ body {
     padding: 2rem;
     background-color: #f9f9f9;
     border-radius: 1rem;
-    
+    box-shadow: 0 0 20px rgba(196, 69, 90, 0.833); 
 }
 
 header {
@@ -34,4 +35,74 @@ header {
 fieldset {
     padding: 1.5rem;
     margin-bottom: 3rem;
+    border-radius: 1rem;
 }
+
+fieldset label {
+    display: block;
+    margin-bottom: 0.5rem;
+}
+
+fieldset div {
+    margin-bottom: 1rem;
+}
+
+fieldset input {
+    padding: 1rem;
+    border-radius: 1rem;
+    border: none;
+    color: oklch(62.895% 0.24362 1.01);
+}
+
+fieldset input:focus,
+fieldset input:hover {
+    outline: 2px solid oklch(80.8% 0.114 19.571);
+}
+
+fieldset input::placeholder {
+    color:  oklch(80.8% 0.114 19.571);
+}
+
+fieldset input[type=file] {
+    color: rgb(83, 134, 230);
+}
+
+fieldset input[type=checkblox],
+fieldset input[type=radio] {
+    outline: none;
+
+}
+
+fieldset input + label {
+    display: inline;
+}
+
+
+fieldset h2 {
+    margin-block: 2rem;
+}
+
+fieldset select,
+fieldset textarea {
+    padding: 1rem;
+    border-radius: 1rem;
+    resize: none;
+}
+
+button {
+    padding: 1rem 2rem;
+    margin-bottom: 2rem;
+    background: oklch(66.7% 0.295 322.15);
+    border: none;
+    color: #f9f9f9;
+    border-radius: 1rem;
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+    button:hover {
+        background: oklch(74% 0.238 322.16);
+        cursor: pointer;
+        transition: ease-in-out .2s;
+
+    }
